Fix aligning of dots in quick-view popup

--- a/css/style.css
+++ b/css/style.css
@@ -561,6 +561,7 @@ Version: 1.0
     margin: 0;
     padding: 0;
     font-size: 0;
+    transform: translateX(-50%);
   }
 
   .q-view-popup .slick-dots button {
